add led0, led1 LEDs and gpio-key
Signed-off-by: Rabeeh Khoury <rabeeh@solid-run.com>

--- a/configs/extra.config
+++ b/configs/extra.config
@@ -260,4 +260,5 @@ CONFIG_DEFAULT_SECURITY_APPARMOR=y
 CONFIG_DEFAULT_SECURITY="apparmor"
 CONFIG_CRYPTO_SHA1=y
 CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
+CONFIG_LEDS_GPIO=y
 
